--- a/default-settings.json
+++ b/default-settings.json
@@ -2,10 +2,11 @@
   "shell": "bash",
   "yabaiPath": "/usr/local/bin/yabai",
   "slidingAnimationPace": 8,
+  "themeScheme": "auto",
   "theme": {
     "dark": {
       "main": "#0f0f0f",
-      "mainAlt": "#98a8c5",
+      "mainAlt": "#464646",
       "minor": "#2b2b2b",
       "red": "#e78482",
       "green": "#8fc8BB",
@@ -14,14 +15,13 @@
       "orange": "#ffb374",
       "magenta": "#ad82cB",
       "cyan": "#7eddde",
-      "black": "#0f0f0f",
-      "white": "#fff",
+      "foreground": "#f5f5f5",
       "gradient": "linear-gradient(0.45turn, var(--spl-orange), var(--spl-red))"
     },
     "light": {
-      "main": "#0f0f0f",
-      "mainAlt": "#98a8c5",
-      "minor": "#2b2b2b",
+      "main": "#f5f5f5",
+      "mainAlt": "#ddd",
+      "minor": "#eee",
       "red": "#e78482",
       "green": "#8fc8BB",
       "blue": "#6db3cE",
@@ -29,10 +29,11 @@
       "orange": "#ffb374",
       "magenta": "#ad82cB",
       "cyan": "#7eddde",
-      "black": "#0f0f0f",
-      "white": "#fff",
+      "foreground": "#0f0f0f",
       "gradient": "linear-gradient(0.45turn, var(--spl-orange), var(--spl-red))"
     },
+    "black": "#0f0f0f",
+    "white": "#f5f5f5",
     "barWidth": "100vw",
     "barHeight": "34px",
     "barVerticalOffset": "0px",
@@ -96,5 +97,6 @@
       "onClickCommand": null,
       "refreshOnClick": false
     }
-  }
+  },
+  "customWidgets": []
 }
