Adds support for custom components

--- a/default-settings.json
+++ b/default-settings.json
@@ -104,5 +104,16 @@
       "refreshOnClick": false
     }
   },
-  "customWidgets": []
+  "customWidgets": [],
+  "customComponents": [
+    {
+      "name": "weather",
+      "enabled": true,
+      "location": "Gorinchem,ZH",
+      "refreshFrequency": 60000,
+      "refreshOnClick": true,
+      "color": "",
+      "classes": ""
+    }
+  ]
 }
