--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,22 @@
 {
-  "plugins": ["react-hooks"],
-  "extends": ["standard", "prettier", "react-app"],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "plugins": ["react", "react-hooks"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
     "no-console": "warn",
-    "standard/no-callback-literal": "off",
-    "jsx-a11y/anchor-is-valid": "off"
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
